Changed fig description for SouthSide

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <h2>Organization: SouthSide Early Childhood Center</h2>
                     <figure>
                 	<img src="images/southside.jpg" alt="The SouthSide Early Childhood Center Building." />
-                	<figcaption>SouthSide Early Childhood Center Campus on Jefferson and Russell in South St. Louis City</figcaption>
+                	<figcaption>Jefferson and Russell in South St. Louis City</figcaption>
                     </figure>
                     <h1>Position: Non-profit Board Member</h1>
                     <p>Role responsibilities include making decisions to approve the
