Removed company and position from titles

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html5>
 <html>
+<link rel="stylesheet" type="text/css" href="styles.css">
     <head>
         <title> Katy Kovac Wittwer - 2017 Launchcode Goals and Resume</title>
-    <h2>Katy Kovac Wittwer: 2017 LC101 Participant</h2>
-    <a href="www.launchcode.org" />
-        <img src="images/lc.png" alt="the Launchcode logo">
-    </a>
-    </br>
-</br>
+            <h2>Katy Kovac Wittwer: 2017 LC101 Participant</h2>
+            <img src="images/lc.png" alt="the Launchcode logo">
     </head>
             <h2>About My Launchcode Journey</h2>
                 <p> I began the LC101 class in January 2017 and will complete the
@@ -20,47 +17,45 @@
                 home one of the first Apple IIe computers. I instantly fell head over heels
                 as soon as I started clacking away on the keyboard and watching the magic
                 happen.</p>
-
             <figure>
-    		<img src="images/apple.jpg" alt="Apple IIe computer and drives" />
-    	    <figcaption>The original 1983 Apple IIe.  Photo courtesy of wikicommons.</figcaption>
+    		          <img src="images/apple.jpg" alt="Apple IIe computer and drives" />
+                	  <figcaption>The original 1983 Apple IIe.  Photo courtesy of wikicommons.</figcaption>
             </figure>
     </head>
     <body>
         <h2>Educational Background</h2>
-        <ul>
-            <li><a href="www.launchcode.org/lc101">2017 Launchcode: LC101 - in progress</a></li>
-            <li><a href="http://lindenwood.smartcatalogiq.com/en/2016-2017/Graduate-Catalog/Plaster-School-of-Business-and-Entrepreneurship/MA-MBA-Programs/Business-Administration-MBA-Marketing-Emphasis">2005 Lindenwood University - MBA with emphasis in Marketing (some coursework completed)</li>
-            <li><a href="https://communication.missouri.edu/undergrad/about">2002 The University of Missouri - B.A. Communications and Visual Media</a></li>
+            <ul>
+                <li><a href="www.launchcode.org/lc101">2017 Launchcode: LC101 - in progress</a></li>
+                <li><a href="http://lindenwood.smartcatalogiq.com/en/2016-2017/Graduate-Catalog/Plaster-School-of-Business-and-Entrepreneurship/MA-MBA-Programs/Business-Administration-MBA-Marketing-Emphasis">2005 Lindenwood University - MBA with emphasis in Marketing (some coursework completed)</li>
+                <li><a href="https://communication.missouri.edu/undergrad/about">2002 The University of Missouri - B.A. Communications and Visual Media</a></li>
 
-        </ul>
-
+            </ul>
         <h2>Work Experience</h2>
-        <ul>
-            <li><a href="#position1">Non-profit Board Member</a></li>
-            <li><a href="#position2">Contract Manager</a></li>
-            <li><a href="#position3">Purchasing Coordinator</a></li>
-            <li><a href="#position4">Marketing Director</a></li>
-            <li><a href="#position5">Special Loans Department Manager</a></li>
-            <li><a href="#position6">Change Control Manager</a></li>
-            <li><a href="#position7">Post-Close Department Supervisor</a></li>
-            <li><a href="#position8">Team Lead</a></li>
-            <li><a href="#position9">Post-Close Loan Auditor</a></li>
-            <li><a href="#position10">Digital Artist</a></li>
-            <li><a href="#position11">Promotions Assistant</a></li>
-        </ul>
+            <ul>
+                <li><a href="#position1">Non-profit Board Member</a></li>
+                <li><a href="#position2">Contract Manager</a></li>
+                <li><a href="#position3">Purchasing Coordinator</a></li>
+                <li><a href="#position4">Marketing Director</a></li>
+                <li><a href="#position5">Special Loans Department Manager</a></li>
+                <li><a href="#position6">Change Control Manager</a></li>
+                <li><a href="#position7">Post-Close Department Supervisor</a></li>
+                <li><a href="#position8">Team Lead</a></li>
+                <li><a href="#position9">Post-Close Loan Auditor</a></li>
+                <li><a href="#position10">Digital Artist</a></li>
+                <li><a href="#position11">Promotions Assistant</a></li>
+            </ul>
 
         <main>
         	<article>
                 <h2>Job History</h2>
-        		<section>
-                    <a id="position1"></a>
-                    <h2>Organization: SouthSide Early Childhood Center</h2>
-                    <figure>
-                	<img src="images/southside.jpg" alt="The SouthSide Early Childhood Center Building." />
-                	<figcaption>Jefferson and Russell in South St. Louis City</figcaption>
-                    </figure>
-                    <h1>Position: Non-profit Board Member</h1>
+        		      <section>
+                          <a id="position1"></a>
+                <h2>SouthSide Early Childhood Center</h2>
+                        <figure>
+                	      <img src="images/southside.jpg" alt="The SouthSide Early Childhood Center Building." />
+                	    <figcaption>Jefferson and Russell in South St. Louis City</figcaption>
+                        </figure>
+                <h1>Non-profit Board Member</h1>
                     <p>Role responsibilities include making decisions to approve the
                         budget, set governance policies, and determine the organization’s
                         strategic direction to achieve its mission.  Positions held:
@@ -70,16 +65,16 @@
 
                 <section>
                 <a id="position2"></a>
-                <h2>Organization: Saint Louis University</h2>
+                <h2>Saint Louis University</h2>
                     <figure>
                 	<img src="images/slu.jpg" alt="Saint Louis University Business and Finance Division" />
                 	<figcaption>St. Louis</figcaption>
                     </figure>
-                    <h1>Position: Contract Manager</h1>
+                    <h1>Contract Manager</h1>
                     <p>Managed contract negotiations, pricing, procurement strategies
                     and vendor relationships for the Medical Campus and SLUCare clinics.</p>
                     <a id="position3"></a>
-                    <h1>Position: Purchasing Coordinator</h1>
+                    <h1>Purchasing Coordinator</h1>
                     <p>Identified cost saving opportunities, introduced processing
                         improvements, and negotiated contractual agreements with vendors.
                         Managed the adherence to University procurement polices by faculty
@@ -88,12 +83,12 @@
 
                     <section>
                     <a id="position4"></a>
-                    <h2>Company: Babymoon, LLC</h2>
+                    <h2>Babymoon, LLC</h2>
                         <figure>
                     	<img src="images/babymoon.png" alt="Babymoon Boutique and Parenting Education Center" />
                     	<figcaption>St. Charles, MO.</figcaption>
                         </figure>
-                    <h1>Position: Marketing Director</h1>
+                    <h1>Marketing Director</h1>
                     <p>Directed business marketing efforts using wordpress, google
                         Adwords, constant contact and social media.  Managed retail staff,
                         monitored inventory levels and worked with vendors on new product
@@ -103,44 +98,44 @@
 
                     <section>
                     <a id="position5"></a>
-                    <h2>Company: Citi</h2>
+                    <h2>Citi</h2>
                         <figure>
                     	<img src="images/citi.jpg" alt="The Citimortgage O'Fallon Campus." />
                     	<figcaption>O'Fallon, MO. </figcaption>
                         </figure>
-                    <h1>Position: Special Loans Department Manager</h1>
+                    <h1>Special Loans Department Manager</h1>
                     <p>Served as the Operations Manager for the Special Loans Department,
                         overseeing the daily productivity of 40 auditors. Remotely trained
                         staff in St. Louis and Chennai, India.</p>
                     <a id="position6"></a>
-                    <h1>Position: Change Control Manager</h1>
+                    <h1>Change Control Manager</h1>
                     <p>Managed the progress of projects and initiatives for the Post Close
                         Operations and Imaging departments. Worked with Capital Markets and
                         Business IT developers on new technology integration. Executive
                         award winner.</p>
                     <a id="position7"></a>
-                    <h1>Position: Post-Close Department Supervisor</h1>
+                    <h1>Post-Close Department Supervisor</h1>
                     <p>Oversaw the daily mortgage audit production goals of 55 auditors
                         in St. Louis and remotely led the departmental start-up and training
                         process of overnight staff in Chennai, India.</p>
                     <a id="position8"></a>
-                    <h1>Position: Team Lead</h1>
+                    <h1>Team Lead</h1>
                     <p>Provided training and leadership to a group of 15 auditors.
                         Reviewed daily work of staff to ensure quality standards were being met.</p>
                     <a id="position9"></a>
-                    <h1>Position: Post-Close Loan Auditor</h1>
+                    <h1>Post-Close Loan Auditor</h1>
                     <p>Audited mortgage loans for inaccuracies in data or documentation
                         during the origination process.</p>
                     </section>
 
                     <section>
                     <a id="position10"></a>
-                    <h2>Company: Miller's Professional Imaging</h2>
+                    <h2>Miller's Professional Imaging</h2>
                         <figure>
                     	<img src="images/millers.jpg" alt="The Miller's Main Campus Building." />
                     	<figcaption>Columbia, MO. </figcaption>
                         </figure>
-                    <h1>Position: Digital Artist</h2>
+                    <h1>Digital Artist</h2>
                     <p>Provided graphic design services for professional photographers
                         from across the country. Performed basic tasks such as object
                         removal, red eye reduction and other photo corrections.</p>
@@ -148,12 +143,12 @@
 
                     <section>
                     <a id="position11"></a>
-                    <h2>Company: The Blue Note</h2>
+                    <h2>The Blue Note</h2>
                         <figure>
                     	<img src="images/thebluenote.jpg" alt="The Blue Note building exterior." />
                     	<figcaption>Columbia, MO. </figcaption>
                         </figure>
-                    <h1>Position: Promotions Assistant</h1>
+                    <h1>Promotions Assistant</h1>
                     <p>Coordinated the marketing of various concerts and special events
                         hosted and produced at the Blue Note. Wrote radio spots, designed
                         signage and made community contacts.
