Revised CSS file

--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html5>
 <html>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<title>Katy Wittwer - 2017 Launchcode Goals and Resume</title>
     <head>
-        <title> Katy Kovac Wittwer - 2017 Launchcode Goals and Resume</title>
-            <h2>Katy Kovac Wittwer: 2017 LC101 Participant</h2>
-            <img src="images/lc.png" alt="the Launchcode logo">
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <h2>Katy Wittwer: 2017 LC101 Participant</h2></br>
+        <img src="images/lc.png" alt="The Launchcode Logo." />
     </head>
-            <h2>About My Launchcode Journey</h2>
+    <body>
+        <header>
+            <h2 class="headings">About My Launchcode Journey</h2>
                 <p> I began the LC101 class in January 2017 and will complete the
                     coursework in June before starting a final, independent project.
                     My goal is to become a Python and Javascript master and
-                    enhance my web development skills.</p>
-
-                <p>My love of technology dates back to when I was five years old and my
-                Grandpa, who was an Educational Technology guru, brought
-                home one of the first Apple IIe computers. I instantly fell head over heels
-                as soon as I started clacking away on the keyboard and watching the magic
-                happen.</p>
-            <figure>
-    		          <img src="images/apple.jpg" alt="Apple IIe computer and drives" />
-                	  <figcaption>The original 1983 Apple IIe.  Photo courtesy of wikicommons.</figcaption>
-            </figure>
-    </head>
-    <body>
-        <h2>Educational Background</h2>
+                    enhance my web development skills.  My love of technology dates
+                    back to when I was five years old and my Grandpa, who was an Educational
+                    Technology guru, brought home one of the first Apple IIe computers.
+                    I instantly fell head over heels as soon as I started clacking away
+                    on the keyboard and watching the magic
+                    happen.</p>
+                    <figure>
+            		     <img src="images/apple.jpg" alt="Apple IIe computer and drives" />
+                         <figcaption>The original 1983 Apple IIe.  Photo courtesy of wikicommons.</figcaption>
+                    </figure>
+        </header>
+        <main>
+        <section>
+            <article>
+        <h2 class="headings">Educational Background</h2>
             <ul>
                 <li><a href="www.launchcode.org/lc101">2017 Launchcode: LC101 - in progress</a></li>
-                <li><a href="http://lindenwood.smartcatalogiq.com/en/2016-2017/Graduate-Catalog/Plaster-School-of-Business-and-Entrepreneurship/MA-MBA-Programs/Business-Administration-MBA-Marketing-Emphasis">2005 Lindenwood University - MBA with emphasis in Marketing (some coursework completed)</li>
+                <li><a href="http://lindenwood.smartcatalogiq.com/en/2016-2017/Graduate-Catalog/Plaster-School-of-Business-and-Entrepreneurship/MA-MBA-Programs/Business-Administration-MBA-Marketing-Emphasis">2005 Lindenwood University -
+                    MBA with emphasis in Marketing (some coursework completed)</li>
                 <li><a href="https://communication.missouri.edu/undergrad/about">2002 The University of Missouri - B.A. Communications and Visual Media</a></li>
 
             </ul>
-        <h2>Work Experience</h2>
+        <h2 class="headings">Work Experience</h2>
             <ul>
                 <li><a href="#position1">Non-profit Board Member</a></li>
                 <li><a href="#position2">Contract Manager</a></li>
@@ -44,10 +48,7 @@
                 <li><a href="#position10">Digital Artist</a></li>
                 <li><a href="#position11">Promotions Assistant</a></li>
             </ul>
-
-        <main>
-        	<article>
-                <h2>Job History</h2>
+                <h2 class="headings">Job History</h2>
         		      <section>
                           <a id="position1"></a>
                 <h2>SouthSide Early Childhood Center</h2>
@@ -57,7 +58,7 @@
                         </figure>
                 <h1>Non-profit Board Member</h1>
                     <p>Role responsibilities include making decisions to approve the
-                        budget, set governance policies, and determine the organization’s
+                        budget, set governance policies, and determine the
                         strategic direction to achieve its mission.  Positions held:
                         2014-2017 Marketing, Communications and Recruitment Committee Chair,
                         2013-2015 Development Committee Chair, 2010-2012 Gala Committee Chair</p>
@@ -158,7 +159,7 @@
         </main>
         <footer>
             <p>Launchcode Unit 2, assignment #1</p>
-            <p>&copy; 2017 Katy (Kovac) Wittwer</p>
+            <p>&copy; 2017 Katy Wittwer</p>
         </footer>
     </body>
 </html>
