--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Katy Wittwer - 2017 Launchcode Goals and Resume</title>
     <head>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <h2>Katy Wittwer: 2017 LC101 Participant</h2></br>
+        <h2 id="name">Katy Wittwer: 2017 LC101 Participant</h2></br>
         <img src="images/lc.png" alt="The Launchcode Logo." />
     </head>
     <body>
@@ -157,7 +157,7 @@
                 </section>
             </article>
         </main>
-        <footer>
+        <footer id="name">
             <p>Launchcode Unit 2, assignment #1</p>
             <p>&copy; 2017 Katy Wittwer</p>
         </footer>
